--- a/vierkante-wielen/package.json
+++ b/vierkante-wielen/package.json
@@ -7,7 +7,7 @@
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.2",
         "alpinejs": "^3.4.2",
-        "autoprefixer": "^10.4.2",
+        "autoprefixer": "10.4.5",
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.7.8",
         "postcss": "^8.4.31",
