--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 
-vierkante_wielen/composer.lock
-vierkante_wielen/package.json
+vierkante-wielen/composer.lock
+vierkante-wielen/package.json
+composer.lock
+package-lock.json
+vierkante-wielen/composer.lock
+vierkante-wielen/composer.lock
