foutmelding opgelost /logout

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ vierkante_wielen/composer.lock
 vierkante_wielen/package.json
 vierkante-wielen/composer.lock
 package-lock.json
+vierkante-wielen/routes/auth.php
