--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ vierkante_wielen/package.json
 vierkante-wielen/composer.lock
 package-lock.json
 vierkante-wielen/routes/auth.php
+vierkante-wielen/package.json
+vierkante-wielen/package-lock.json
